create end to end flow of safe tx scripting + erc20 contract

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,9 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@safe-global/api-kit": "^2.0.0",
+    "@safe-global/protocol-kit": "^2.0.0",
+    "@safe-global/safe-core-sdk-types": "^3.0.1",
+    "abitype": "^1.0.0",
+    "dotenv": "^16.4.1",
+    "ethers": "^6.10.0",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.16",
+    "nodemon": "^3.0.3",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4"
+  }
 }
